deno: allow env

--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,6 @@
 {
   "tasks": {
-    "start": "deno run --allow-net --allow-read --allow-write server.ts"
+    "start": "deno run --allow-net --allow-env --allow-read --allow-write server.ts"
   },
   "fmt": {
     "include": ["server.ts", "public/index.html"]
