--- a/deno.json
+++ b/deno.json
@@ -7,5 +7,10 @@
   },
   "lint": {
     "include": ["server.ts"]
+  },
+  "imports": {
+    "@std/fs": "jsr:@std/fs@^1.0.19",
+    "@std/http": "jsr:@std/http@^1.0.20",
+    "@std/path": "jsr:@std/path@^1.1.1"
   }
 }
